maggiesStyles.css
/* ... */
@keyframes sweepingGradient {
    0% {
        background-position: 0% 50%;
    }
    18% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 100% 50%;
    }
}
.menuList {
    list-style-type: none;
    padding: 0;
    margin: 0;
}
.staticNavLinks {
    background-color: var(--blackCoffee);
    box-shadow: 0 2px 5px rgba(0,0,0,0.6);
    border-radius: 8px 8px 8px 0;
    display: flex;
    gap: 12px;
    justify-content: space-around;
    padding: 4px;
    animation: slideDown 0.8s ease-in-out forwards;
    list-style-type: none;
    margin-top: 140px;
}
#menuIntro {
    animation: slideUp 0.8s ease-in-out forwards;
}
.menuItem {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.menuTitle {
    font-size: 1.4em;
    padding: 0;
    margin: 4px 0;
}
.itemTitle {
    font-size: 1.2em;
    padding: 0;
    margin: 2px 0;
}
.itemDesc {
    padding: 0;
    margin: 6px 0;
}
.itemChoices {
    border: solid 2px black;
    border-radius: 10px;
    padding: 10px;
    width: 80%;
}
.offersContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    font-weight: 600;
}
.priceContainer {
    display: flex;
    width: 100%;
    flex-direction: row !important;
    justify-content: space-evenly;
    align-items: center;
}
.priceContainer hr {
    border: none;
    border-left: solid 1px #333;
    height: 40px;
    margin: 0 10px;
    align-self: center;
}
.soloPrice {
    display: flex;
    width: 100%;
    flex-direction: row !important;
    justify-content: center;
    align-items: center;
    gap: 4px;
}
.prettyTitle {
    font-family: "Style Script", "Brush Script MT";
    font-weight: 600;
    font-size: 3em;
    opacity: 0.8;
    padding: 2px;
    margin: 2px;
}
.prettyText {
    font-family: "Style Script", "Brush Script MT";
    font-weight: 400;
    font-size: 1.5em;
    opacity: 0.8;
}
#espressoDrinks {
    opacity: 0;
    animation: slideUp 0.8s ease-in-out forwards;
    animation-delay: 0.2s;
}

#events {
    opacity: 0;
    animation: slideUp 1s ease-in-out forwards;
    animation-delay: 0.8s;
}

#contact {
    opacity: 0;
    animation: slideUp 1s ease-in-out forwards;
    animation-delay: 0.8s;
}

.footerContainer {
    display: flex;
    flex-direction: column;
    margin: 0;
}
.textSeparator {
    background-color: var(--lessBlackCoffee);
    color: var(--bubbleWhite);
    text-align: center;
    padding: 0;
    margin-top: 20px;
    font-size: 0.6em;
    border-radius: 10px 10px 0 0;
}
#contactAndHours h3, p {
    margin: 2px 0;
    padding: 2px 0;
}
#contactAndHours {
    display: flex;
    justify-content: center;
    background-color: var(--blackCoffee);
    padding: 8px 0;
    border-radius: 10px 10px 0 0;
}
.footerLogo {
    margin: 30px 0 20px 0;
    width: 60px;
    height: auto;
}
.footerBrand {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    font-family: "Style Script", "Brush Script MT", cursive;
    font-size: 1.2em;
}
.footerContact {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100px;
    flex-grow: 2;
    text-decoration: none;
}
.phoneNumber {
    text-decoration: none;
    color: #0066ff;
}
#footerSeparator {
    display: flex;
    justify-content: center;
    flex-grow: 3;
}
.footerHours {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100px;
    flex-grow: 2;
}

.directionsView {
    width: 290px;
    height: 290px;
    border-radius: 10px;
    margin: 4px 0;
    box-shadow: 0 0 6px #333;
}

/* Responsive Design */
@media screen and (min-width: 850px) {
    main {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        margin: 0 auto;
    }
    
    .bubble {
        width: 100%;
    }

    .bubbleContainer {
        display: flex;
        flex-direction: column;
        width: 100%;
        justify-content: center;
        align-items: center;
    }
    
    .appButtonImg {
        width: 150px;
    }
}
/* ... */

